--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://DEV-NISHANT-HERE.github.io/AstroChamp_Frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
