--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT = 8000
 DB_URL = mongodb+srv://nishanttomar:Mongo321@cluster0.vinh0fb.mongodb.net/?retryWrites=true&w=majority
+CORS_ORIGIN = *
