--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://DEV_NISHANT_HERE.github.io/AstroChamp_Frontend",
+  "homepage": "https://DEV_NISHANT_HERE.github.io/AstroChamp_Frontend/",
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +16,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-scroll-percentage": "^4.3.2",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
@@ -24,7 +25,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
