gh-pages branch added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DEV_NISHANT_HERE.github.io/AstroChamp_Frontend/",
+  "homepage": "https://nishant-tomar1.github.io/AstroChamp",
   "name": "frontend",
   "version": "0.1.0",
   "private": false,
