basename change from routes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nishant-tomar1.github.io/AstroChamp",
+  "homepage": "https://nishant-tomar1.github.io/astrochamp",
   "name": "frontend",
   "version": "0.1.0",
   "private": false,
