--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nishant-tomar1.github.io/astrochamp",
+  "homepage": "astrochamp",
   "name": "frontend",
   "version": "0.1.0",
   "private": false,
@@ -10,7 +10,6 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.12",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
